[project]
name = "ebyst"
version = "0.4.0"
dependencies = [
    "pyftdi==0.57.1",
    "bitarray==3.8.0",
    "pyparsing==3.2.5",
]
authors = [
  { name="Sijmen Woutersen", email="sijmen.woutersen@gmail.com" },
]
description = "Boundary scan test library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/swolix/ebyst"
Issues = "https://github.com/swolix/ebyst/issues"

[project.scripts]
staplay = "ebyst.staplay:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
